<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificacionesActivity">

    <EditText
        android:id="@+id/editTextTextoNotificacion"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/vacio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTextoNotificacion"
        app:layout_constraintStart_toEndOf="@+id/textViewTextoNotificacion"
        app:layout_constraintTop_toTopOf="@+id/textViewTextoNotificacion" />

    <TextView
        android:id="@+id/textViewTituloNotificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="196dp"
        android:text="@string/tituloNotificacion"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTextoNotificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/textoNotificacion"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTituloNotificacion"
        app:layout_constraintStart_toStartOf="@+id/textViewTituloNotificacion"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloNotificacion" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/vacio"
        android:text="@string/segundos"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTextoNotificacion"
        app:layout_constraintTop_toBottomOf="@+id/textViewTextoNotificacion" />

    <EditText
        android:id="@+id/editTextTituloNotificacion"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/vacio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTituloNotificacion"
        app:layout_constraintStart_toEndOf="@+id/textViewTituloNotificacion"
        app:layout_constraintTop_toTopOf="@+id/textViewTituloNotificacion" />

    <EditText
        android:id="@+id/editTextRetardo"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/segundos0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/segundos0"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/btnMostrarNotificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:text="@string/mostrar"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>